background image span 100% width rest black. text input in contact.html white

--- a/css/design.css
+++ b/css/design.css
@@ -1,5 +1,6 @@
 body {
-    background-image: url("../img/protest.png");
+    background: url("../img/protest.png") #000 no-repeat;
+    background-size: 100%;
 }
 
 #map-button{
